experimento/deployment/k8s/1-experimento-managed.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: candidato
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: candidato
  template:
    metadata:
      labels:
        app: candidato
    spec:
      containers:
      - name: candidato
        image: 299577415580.dkr.ecr.us-east-1.amazonaws.com/candidato:latest
        ports:
        - containerPort: 5001
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: role
                operator: In
                values:
                - managed-nodes
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - candidato
            topologyKey: kubernetes.io/hostname
            namespaces:
            - default
