experimento/deployment/k8s/3-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: experimento-managed-nodeport-service
  labels:
    app: experimento3-managed
spec:
  type: NodePort
  selector:
    app: experimento3-managed
  ports:
    - port: 5001
      targetPort: 5001
      #nodePort: 31231
